# TransmissionSync

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.am.light  NEWS  README  README.md  WARNING.txt  autogen.sh  configure.ac  configure.ac.light  install_centos64.txt  libtool  transmission-gtk.spec  update-version-h.sh
SibSync.xcodeproj/: project.pbxproj
SibSync.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SibSync.xcodeproj/project.xcworkspace/xcshareddata/: SibSync.xccheckout
SibSync.xcodeproj/project.xcworkspace/xcuserdata/simon.xcuserdatad/: UserInterfaceState.xcuserstate
daemon/: Makefile.in
docs/: build.txt  build_centos64.txt  install_macos10.9.txt
gtk/: Makefile.in
libtransmission/: Makefile.am  Makefile.am.light  Makefile.am.long  Makefile.in  bandwidth.c  completion.h  peer-mgr.c  peer-msgs.c  torrent.c  verify.c
m4/: ChangeLog
macosx/: Makefile.in
po/: ChangeLog  Makevars
qt/: favicon.cc  file-tree.cc
sibsync/: Makefile.am  sibsync  sibsync.c  version.h
transmissionbt/: Makefile.in  configure
transmissionbt/Transmission.xcodeproj/project.xcworkspace/xcuserdata/simon.xcuserdatad/: UserInterfaceState.xcuserstate
transmissionbt/cli/: Makefile.in
transmissionbt/extras/: Makefile.in
transmissionbt/gtk/icons/: Makefile.in
transmissionbt/libtransmission/: announcer.c  cache.c  ptrarray.c  ptrarray.h  rpcimpl.c  session.c  torrent.h  trevent.c  version.h
transmissionbt/web/javascript/: Makefile.in
utils/: Makefile.in
web/: Makefile.in
web/images/: Makefile.in
web/javascript/jquery/: Makefile.in
web/style/: Makefile.in
web/style/jqueryui/: Makefile.in
web/style/jqueryui/images/: Makefile.in
web/style/transmission/: Makefile.in
web/style/transmission/images/: Makefile.in
web/style/transmission/images/buttons/: Makefile.in
